TP4/module5/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: shop
spec:
  selector:
    app: frontend
  ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: shop
spec:
  selector:
    app: api
  ports:
    - port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: shop
spec:
  selector:
    app: db
  ports:
    - port: 5432
